--- a/app/globals.css
+++ b/app/globals.css
@@ -57,4 +57,23 @@
   body {
     @apply block bg-background text-foreground h-screen w-screen;
   }
+
+  .scrollbars::-webkit-scrollbar {
+    background-color: transparent;
+    width: 0.25rem;
+  }
+
+  .scrollbars::-webkit-scrollbar-track {
+    background-color: var(--background);
+  }
+
+  .scrollbars::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--border));
+    border-radius: 1rem;
+    border: 0.25rem solid rgb(var(--background));
+  }
+
+  .scrollbars::-webkit-scrollbar-button {
+    display: none;
+  }
 }
